--- a/model/5_Santiago_Rent_Apartment_Model_Prediction.ipynb
+++ b/model/5_Santiago_Rent_Apartment_Model_Prediction.ipynb
@@ -2264,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2282,7 +2282,7 @@
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
     "    renderer='png',\n",
-    "    save_file='fig_price_train_surface_0_50.html'\n",
+    "    save_file='fig_price_train_surface_0_50'\n",
     ")"
    ]
   },
