--- a/model/5_Santiago_Rent_Apartment_Model_Prediction.ipynb
+++ b/model/5_Santiago_Rent_Apartment_Model_Prediction.ipynb
@@ -1241,55 +1241,6 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Renderers configuration\n",
-       "-----------------------\n",
-       "    Default renderer: 'plotly_mimetype+notebook'\n",
-       "    Available renderers:\n",
-       "        ['plotly_mimetype', 'jupyterlab', 'nteract', 'vscode',\n",
-       "         'notebook', 'notebook_connected', 'kaggle', 'azure', 'colab',\n",
-       "         'cocalc', 'databricks', 'json', 'png', 'jpeg', 'jpg', 'svg',\n",
-       "         'pdf', 'browser', 'firefox', 'chrome', 'chromium', 'iframe',\n",
-       "         'iframe_connected', 'sphinx_gallery', 'sphinx_gallery_png']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pio.renderers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "plotly.io._base_renderers.PngRenderer"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "png_renderer = pio.renderers[\"png\"]\n",
-    "type(png_renderer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
    "outputs": [],
    "source": [
     "def create_maps(df, geojson, features, colorscales, renderer, save_file=None):\n",
@@ -1433,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1495,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1455,7 @@
        "Text(0.5, 1.0, 'Test set')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1546,7 +1497,7 @@
     "\n",
     "In a previous notebook we had identified the apartment *Surface* as the most important *Price* predictor, besides *Location*, thus we create different figures for specific ranges of *Surface* values, which allow us to examine in more detail the interplay between these two predictor features in terms of the observed predictions.\n",
     "\n",
-    "When the mouse hovers over each map location, a text is displayed, which correspond to *Location, Price_mean, Location_count* in the left-hand panel and to *Location, Price_res_mean_pce, Location_count* in the right-hand panel.\n",
+    "When the mouse hovers over each map location (when using `renderer='notebook'` in function `create_maps`), a text is displayed, which correspond to *Location, Price_mean, Location_count* in the left-hand panel and to *Location, Price_res_mean_pce, Location_count* in the right-hand panel.\n",
     "Map locations where there is no data in each interval of *Surface* values, i.e. where *Location_count = 0*, are shown in gray."
    ]
   },
@@ -1559,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -2244,7 +2195,7 @@
        "51                Alhue             0.0         298  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2264,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -2965,7 +2916,7 @@
        "51                Alhue             0.0         298  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2985,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3002,7 +2953,8 @@
     "    geojson_rm, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
-    "    renderer='png'\n",
+    "    renderer='png',\n",
+    "    save_file='fig_price_train_surface_50_100'\n",
     ")"
    ]
   },
@@ -3015,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -3685,7 +3637,7 @@
        "51                Alhue             0.0         298  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3705,7 +3657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3722,7 +3674,8 @@
     "    geojson_rm, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
-    "    renderer='png'\n",
+    "    renderer='png',\n",
+    "    save_file='fig_price_train_surface_100_600'\n",
     ")"
    ]
   },
@@ -3735,7 +3688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -4405,7 +4358,7 @@
        "51                Alhue             0.0         298  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4425,7 +4378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4442,7 +4395,8 @@
     "    geojson_rm, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
-    "    renderer='png'\n",
+    "    renderer='png',\n",
+    "    save_file='fig_price_test_surface_0_50'\n",
     ")"
    ]
   },
@@ -4455,7 +4409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -5125,7 +5079,7 @@
        "51                Alhue             0.0         298  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5145,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -5162,7 +5116,8 @@
     "    geojson_rm, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
-    "    renderer='png'\n",
+    "    renderer='png',\n",
+    "    save_file='fig_price_test_surface_50_100'\n",
     ")"
    ]
   },
@@ -5175,7 +5130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -5845,7 +5800,7 @@
        "51                Alhue             0.0         298  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5865,7 +5820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -5882,7 +5837,8 @@
     "    geojson_rm, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
-    "    renderer='png'\n",
+    "    renderer='png',\n",
+    "    save_file='fig_price_test_surface_100_600'\n",
     ")"
    ]
   },
