--- a/model/3_Santiago_Rent_Apartment_Feature_Engineering.ipynb
+++ b/model/3_Santiago_Rent_Apartment_Feature_Engineering.ipynb
@@ -2555,7 +2555,7 @@
    "source": [
     "In the resulting training and test sets, the ordering of the transformed columns follows the order of the transformations applied in the defined pipeline. In this case, the table below outlines the relationship between the original features and the transformed columns, for each of the transformation carried out.\n",
     "\n",
-    "Next, we will use this information to train several models defined by different algorithms and different sets of predictor features. Finally, we will compare their predictive power and select the best performing model, which will be deployed in a webapp. "
+    "Next, we will use this information to train several models defined by different algorithms and different sets of predictor features. Based on their predictive power, we will select the models that perform best to further analyse their predictions on the training and test sets. "
    ]
   },
   {
