--- a/model/4_Santiago_Rent_Apartment_Model_Building.ipynb
+++ b/model/4_Santiago_Rent_Apartment_Model_Building.ipynb
@@ -5855,11 +5855,12 @@
     "\n",
     "From the figure and dataframe above, we can extract some observations: \n",
     "\n",
-    "- As we may intuitively have expected, all the top best-performing models (considering them as the ones ranked with lower MAPE and MAE) were trained using the feature set 15, which includes all the predictor features in the dataset. That is, in this case it seems that the more data we include in the training process, the better the performance of the trained model is. <br><br>\n",
+    "- As we may intuitively have expected, all the top best-performing models (considering them as the ones ranked with lower MAPE and MAE) were trained using the feature set 15, which includes all the predictor features in the dataset. That is, in this case it seems that the more data we include in the training process, the better the performance of the trained model is. <br>\n",
     "\n",
-    "- The features *Surface* and *Location* seem to be the most important *Price* predictors, as they're included in the best-performing models found for all the tested algorithms. Although only using *Surface* and *Location* (feature set 7) as predictors can lead to good results, still significantly better model predictions are obtained including additional information from *Bedrooms* (feature set 12) and *Bathrooms* (feature set 15) values. <br><br>\n",
+    "- The features *Surface* and *Location* seem to be the most important *Price* predictors, as they're included in the best-performing models found for all the tested algorithms. Although only using *Surface* and *Location* (feature set 7) as predictors can lead to good results, still significantly better model predictions are obtained including additional information from *Bedrooms* (feature set 12) and *Bathrooms* (feature set 15) values. <br>\n",
     "\n",
-    "- Based on our criterion (lower MAPE and MAE) the best-performing models are two models trained using the XGBoost Regressor algorithm and all the available predictor features (feature set 15). These model show the lowest MAE (~183102 and ~182782 CLP) and MAPE (0.140978% and 0.141202%) among the best-performing models obtained for all the algorithm tested. We will deploy these two models to obtain averaged predictions in our Web Application. "
+    "- Based on our criterion (lower MAPE and MAE) the best-performing models are two models trained using the XGBoost Regressor algorithm and all the available predictor features (feature set 15). These model show the lowest MAE (~183102 and ~182782 CLP) and MAPE (0.140978% and 0.141202%) among the best-performing models obtained for all the algorithm tested. In the next notebook we will use these two models to make averaged predictions the training and \n",
+    "test sets and compare their geospatial distributions. "
    ]
   }
  ],
