--- a/model/5_Santiago_Rent_Apartment_Model_Prediction.ipynb
+++ b/model/5_Santiago_Rent_Apartment_Model_Prediction.ipynb
@@ -386,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also define a function that allows us to load the implemented preprocessing pipeline, the best-performing models selected for deployment, and other necessary artifacts for our analysis.  "
+    "We also define a function that allows us to load the implemented preprocessing pipeline, the selected models, and other necessary artifacts for our analysis.  "
    ]
   },
   {
@@ -397,12 +397,12 @@
    "source": [
     "def load_saved_artifacts():\n",
     "    \"\"\"\n",
-    "    Load saved artifacts used for deployment, such as preprocessing pipeline and selected best-performing models. \n",
+    "    Load previously saved artifacts such as preprocessing pipeline and selected models. \n",
     "\n",
     "    Returns\n",
     "    -------\n",
     "        tuple\n",
-    "        Containing preprocessing pipeline, selected models for deployment and their corresponding features, and \n",
+    "        Containing preprocessing pipeline, selected models and their corresponding features, and \n",
     "        a list including available apartment locations.   \n",
     "    \"\"\"  \n",
     "    pipeline = joblib.load('pipe_all.pkl')        \n",
@@ -7648,7 +7648,7 @@
     "- For a few locations, price residuals (*Price_rmp*) in the training set are very low, but significantly higher in the test set.\n",
     "This is the case of *Providencia*, where the discrepancy between training and test residuals is of ~7% for *Surface* intervals between 0 - 50 and 100 - 600 m2. \n",
     "Likewise, the difference in train and test residuals is ~10% in *Santiago* for the *Surface* intervals between 100 - 600 m2.\n",
-    "These discrepancies in residuals may be an indication of overfitting, which could be overcome by including additional listings from these locations and *Surface* intervals, and subsequently retraining the selected models prior to deployment. <br> \n",
+    "These discrepancies in residuals may be an indication of overfitting, which could be overcome by including additional listings from these locations and *Surface* intervals, and subsequently retraining the selected models. <br> \n",
     "\n",
     "- On the other hand, high price residuals (*Price_rmp*) are observed in both the training and test sets for the location *Quinta Normal*. Here residuals are higher than 12% for *Surface* intervals between 0 - 50 and 50 - 100 m2, despite the fact that there are presumably sufficient data samples in the training set.\n",
     "This could be a sign of underfitting, which may be caused by data that is more complex (harder to learn by the models) than for other locations.\n",
