--- a/model/2_Santiago_MR_Rent_Apartment_EDA.ipynb
+++ b/model/2_Santiago_MR_Rent_Apartment_EDA.ipynb
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"RENT_APARTMENT_RM_clean.csv\")\n",
+    "df = pd.read_csv(\"RENT_APARTMENT_MR_clean.csv\")\n",
     "print(df.shape)\n",
     "df"
    ]
@@ -3365,7 +3365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df10.to_csv(\"RENT_APARTMENT_RM_eda.csv\", index=False)"
+    "df10.to_csv(\"RENT_APARTMENT_MR_eda.csv\", index=False)"
    ]
   }
  ],
