--- a/model/3_Santiago_MR_Rent_Apartment_Feature_Engineering.ipynb
+++ b/model/3_Santiago_MR_Rent_Apartment_Feature_Engineering.ipynb
@@ -196,7 +196,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"RENT_APARTMENT_RM_eda.csv\")\n",
+    "df = pd.read_csv(\"RENT_APARTMENT_MR_eda.csv\")\n",
     "print(df.shape)\n",
     "df"
    ]
@@ -2585,8 +2585,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.to_csv(\"RENT_APARTMENT_RM_training_set.csv\", index=False)\n",
-    "df_test.to_csv(\"RENT_APARTMENT_RM_test_set.csv\", index=False)"
+    "df_train.to_csv(\"RENT_APARTMENT_MR_training_set.csv\", index=False)\n",
+    "df_test.to_csv(\"RENT_APARTMENT_MR_test_set.csv\", index=False)"
    ]
   }
  ],
