--- a/model/5_Santiago_MR_Rent_Apartment_Model_Prediction.ipynb
+++ b/model/5_Santiago_MR_Rent_Apartment_Model_Prediction.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"RENT_APARTMENT_RM_eda.csv\")\n",
+    "df = pd.read_csv(\"RENT_APARTMENT_MR_eda.csv\")\n",
     "print(df.shape)\n",
     "# df"
    ]
@@ -406,7 +406,7 @@
     "        a list including available apartment locations.   \n",
     "    \"\"\"  \n",
     "    pipeline = joblib.load('pipe_all.pkl')        \n",
-    "    features = joblib.load('RENT_APARTMENT_RM_features.pkl')\n",
+    "    features = joblib.load('RENT_APARTMENT_MR_features.pkl')\n",
     "    locations = sorted(joblib.load('list_location_encoded.pkl'))\n",
     "    \n",
     "    models = []\n",
@@ -1023,11 +1023,11 @@
     "# load geojson containing cities of interest\n",
     "path_geojson = \"chile_comunas.geojson\"\n",
     "region = \"Region Metropolitana de Santiago\"\n",
-    "geojson_rm, dct_locations = get_geometry(path_geojson, region)\n",
+    "geojson_mr, dct_locations = get_geometry(path_geojson, region)\n",
     "\n",
     "# save geojson containing cities of interest\n",
-    "with open('chile_comunas_rm.geojson', 'w') as f:\n",
-    "    json.dump(geojson_rm, f)"
+    "with open('chile_comunas_MR.geojson', 'w') as f:\n",
+    "    json.dump(geojson_mr, f)"
    ]
   },
   {
@@ -1101,8 +1101,8 @@
    ],
    "source": [
     "dct_locations\n",
-    "# len(geojson_rm['features'])\n",
-    "# geojson_rm"
+    "# len(geojson_mr['features'])\n",
+    "# geojson_mr"
    ]
   },
   {
@@ -2229,7 +2229,7 @@
    "source": [
     "create_maps(\n",
     "    df_train_surface_0_50_nonan, \n",
-    "    geojson_rm, \n",
+    "    geojson_mr, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
     "    renderer='png',\n",
@@ -2950,7 +2950,7 @@
    "source": [
     "create_maps(\n",
     "    df_train_surface_50_100_nonan, \n",
-    "    geojson_rm, \n",
+    "    geojson_mr, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
     "    renderer='png',\n",
@@ -3671,7 +3671,7 @@
    "source": [
     "create_maps(\n",
     "    df_train_surface_100_600_nonan, \n",
-    "    geojson_rm, \n",
+    "    geojson_mr, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
     "    renderer='png',\n",
@@ -4392,7 +4392,7 @@
    "source": [
     "create_maps(\n",
     "    df_test_surface_0_50_nonan, \n",
-    "    geojson_rm, \n",
+    "    geojson_mr, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
     "    renderer='png',\n",
@@ -5113,7 +5113,7 @@
    "source": [
     "create_maps(\n",
     "    df_test_surface_50_100_nonan, \n",
-    "    geojson_rm, \n",
+    "    geojson_mr, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
     "    renderer='png',\n",
@@ -5834,7 +5834,7 @@
    "source": [
     "create_maps(\n",
     "    df_test_surface_100_600_nonan, \n",
-    "    geojson_rm, \n",
+    "    geojson_mr, \n",
     "    features=['Price_mean','Price_res_mean_pce'], \n",
     "    colorscales=['viridis', 'spectral'],\n",
     "    renderer='png',\n",
@@ -5859,16 +5859,16 @@
     "id_column = 'Location_id'\n",
     "add_columns = ['Price_mean','Price_pred_mean','Price_res_mean','Price_res_mean_pce','Location_count']\n",
     "\n",
-    "_ = add_dataframe_to_geojson(df_train_surface_0_50, geojson_rm, id_column, add_columns=add_columns, add_suffix='train_surface_0_50')\n",
-    "_ = add_dataframe_to_geojson(df_train_surface_50_100, geojson_rm, id_column, add_columns=add_columns, add_suffix='train_surface_50_100')\n",
-    "_ = add_dataframe_to_geojson(df_train_surface_100_600, geojson_rm, id_column, add_columns=add_columns, add_suffix='train_surface_100_600')\n",
-    "_ = add_dataframe_to_geojson(df_test_surface_0_50, geojson_rm, id_column, add_columns=add_columns, add_suffix='test_surface_0_50')\n",
-    "_ = add_dataframe_to_geojson(df_test_surface_50_100, geojson_rm, id_column, add_columns=add_columns, add_suffix='test_surface_50_100')\n",
-    "_ = add_dataframe_to_geojson(df_test_surface_100_600, geojson_rm, id_column, add_columns=add_columns, add_suffix='test_surface_100_600')\n",
+    "_ = add_dataframe_to_geojson(df_train_surface_0_50, geojson_mr, id_column, add_columns=add_columns, add_suffix='train_surface_0_50')\n",
+    "_ = add_dataframe_to_geojson(df_train_surface_50_100, geojson_mr, id_column, add_columns=add_columns, add_suffix='train_surface_50_100')\n",
+    "_ = add_dataframe_to_geojson(df_train_surface_100_600, geojson_mr, id_column, add_columns=add_columns, add_suffix='train_surface_100_600')\n",
+    "_ = add_dataframe_to_geojson(df_test_surface_0_50, geojson_mr, id_column, add_columns=add_columns, add_suffix='test_surface_0_50')\n",
+    "_ = add_dataframe_to_geojson(df_test_surface_50_100, geojson_mr, id_column, add_columns=add_columns, add_suffix='test_surface_50_100')\n",
+    "_ = add_dataframe_to_geojson(df_test_surface_100_600, geojson_mr, id_column, add_columns=add_columns, add_suffix='test_surface_100_600')\n",
     "\n",
     "# save geojson containing additional properties\n",
-    "with open('../qgis/chile_comunas_rm_2.geojson', 'w') as f:\n",
-    "    json.dump(geojson_rm, f)"
+    "with open('../qgis/chile_comunas_MR_2.geojson', 'w') as f:\n",
+    "    json.dump(geojson_mr, f)"
    ]
   },
   {
